--- a/bundle-artifacts/connector/kustomization.yaml
+++ b/bundle-artifacts/connector/kustomization.yaml
@@ -13,8 +13,8 @@ configurations:
 
 images:
   - name: java-grpc-connector-template
-    newName: PLACEHOLDER_REGISTRY_ADDRESS/cp/aiopsedge/java-grpc-connector-template
-    newTag: latest
+    newName: docker.io/yangkwang/java-grpc-connector-template
+    newTag: demo
 
 vars:
   - name: SERVICE_NAME
