--- a/bundlemanifest.yaml
+++ b/bundlemanifest.yaml
@@ -13,7 +13,7 @@ spec:
         path: /bundle-artifacts/prereqs
         type: kustomize
   instanced:
-    repo: 'https://github.ibm.com/katamari/java-grpc-connector-template'
+    repo: 'https://github.com/yangkwang/cp4waiops-connectors-java-template'
     branch: main
     authSecret:
       name: test-utilities-github-token
